--- a/app/src/main/res/layout/activity_find_match.xml
+++ b/app/src/main/res/layout/activity_find_match.xml
@@ -1,128 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:animateLayoutChanges="true"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
+    android:fillViewport="true"
     tools:context=".findmatch.FindMatchActivity">
 
-    <com.mikepenz.iconics.view.IconicsImageView
-        android:id="@+id/searchingIndicator"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_gravity="start"
-        android:layout_marginTop="32dp"
-        android:contentDescription="@string/find_match_loading_indicator"
-        app:iiv_color="@color/colorPrimary"
-        app:iiv_icon="cmd-soccer"
-        tools:src="@mipmap/ic_launcher" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginRight="16dp"
-        android:text="@string/find_match_searching"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
-    <com.mikepenz.iconics.view.IconicsTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
-        android:drawablePadding="8dp"
-        android:text="@string/find_match_nearby_info"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        app:iiv_start_color="@color/icon"
-        app:iiv_start_icon="cmd-google-nearby"
-        app:iiv_start_padding="4dp"
-        app:iiv_start_size="32dp" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/playerContainer"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="16dp"
-        android:visibility="gone"
-        app:cardUseCompatPadding="true"
-        tools:visibility="visible">
+        android:animateLayoutChanges="true"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <com.mikepenz.iconics.view.IconicsImageView
+            android:id="@+id/searchingIndicator"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="start"
+            android:layout_marginTop="32dp"
+            android:contentDescription="@string/find_match_loading_indicator"
+            app:iiv_color="@color/colorPrimary"
+            app:iiv_icon="cmd-soccer"
+            tools:src="@mipmap/ic_launcher" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginRight="16dp"
+            android:text="@string/find_match_searching"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+        <com.mikepenz.iconics.view.IconicsTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:drawablePadding="8dp"
+            android:text="@string/find_match_nearby_info"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            app:iiv_start_color="@color/icon"
+            app:iiv_start_icon="cmd-google-nearby"
+            app:iiv_start_padding="4dp"
+            app:iiv_start_size="32dp" />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/playerContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
+            android:visibility="gone"
+            app:cardUseCompatPadding="true"
+            tools:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/find_match_team_mates"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="0dp"
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/find_match_team_mates"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="@string/find_match_opponents"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/teamMateList"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        tools:ignore="NestedWeights"
+                        tools:listitem="@layout/item_player" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:background="@color/divider" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/opponentList"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        tools:listitem="@layout/item_player" />
+
+                </LinearLayout>
+
+                <com.mikepenz.iconics.view.IconicsButton
+                    android:id="@+id/startMatchButton"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/find_match_opponents"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
-
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="8dp"
+                    android:textColor="@android:color/white"
+                    app:backgroundTint="@color/colorPrimary"
+                    tools:text="@string/find_match_start" />
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/teamMateList"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    tools:ignore="NestedWeights"
-                    tools:listitem="@layout/item_player" />
-
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:background="@color/divider" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/opponentList"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    tools:listitem="@layout/item_player" />
-
-            </LinearLayout>
-
-            <com.mikepenz.iconics.view.IconicsButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginBottom="8dp"
-                android:text="@string/find_match_start"
-                android:textColor="@android:color/white"
-                app:backgroundTint="@color/colorPrimary" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
