--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:foreground="?attr/selectableItemBackground"
-            app:cardUseCompatPadding="true">
+            app:cardUseCompatPadding="true"
+            tools:ignore="UnusedAttribute">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -89,7 +90,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:foreground="?attr/selectableItemBackground"
-            app:cardUseCompatPadding="true">
+            app:cardUseCompatPadding="true"
+            tools:ignore="UnusedAttribute">
 
             <LinearLayout
                 android:layout_width="match_parent"
