--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            tools:text="Welcome to the Kickchain!" />
+            tools:text="Welcome to Kickdroid!" />
 
         <TextView
             android:id="@+id/subhead"
