--- a/src/main/res/layout/fragment_statistics_third.xml
+++ b/src/main/res/layout/fragment_statistics_third.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackgroundBorderless"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="Overdraw">
 
     <com.mikepenz.iconics.view.IconicsImageView
         android:layout_width="wrap_content"
