--- a/src/main/res/layout/view_empty.xml
+++ b/src/main/res/layout/view_empty.xml
@@ -1,25 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="8dp"
-        android:src="@mipmap/ic_launcher"
-        tools:ignore="ContentDescription" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:text="@string/statistics_empty"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-</LinearLayout>
+    android:layout_gravity="center_horizontal"
+    android:drawableTop="@mipmap/ic_launcher"
+    android:drawablePadding="16dp"
+    android:gravity="center"
+    android:text="@string/statistics_empty"
+    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
