--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
         android:fillViewport="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
@@ -36,6 +36,7 @@
                 android:id="@+id/headline"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Headline"
@@ -45,69 +46,25 @@
                 android:id="@+id/subhead"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@+id/headline"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
                 android:layout_marginBottom="16dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 tools:text="Set your name by tapping here." />
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/startMatchButton"
+            <FrameLayout
+                android:id="@+id/gameContainer"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:foreground="?attr/selectableItemBackground"
-                app:cardUseCompatPadding="true"
-                tools:ignore="UnusedAttribute">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    tools:ignore="UseCompoundDrawables">
-
-                    <com.mikepenz.iconics.view.IconicsImageView
-                        android:id="@+id/startMatchIcon"
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
-                        android:padding="8dp"
-                        app:iiv_color="@color/colorPrimary"
-                        app:iiv_icon="cmd-sword-cross"
-                        tools:src="@mipmap/ic_launcher" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:layout_marginLeft="8dp"
-                        android:animateLayoutChanges="true"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/startMatchText"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                            tools:text="@string/main_start_match" />
-
-                        <TextView
-                            android:id="@+id/startMatchStatus"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/main_set_name_status"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
-
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
+                android:layout_height="match_parent"
+                android:layout_above="@+id/bestPlayersButton"
+                android:layout_below="@+id/subhead" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/bestPlayersButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
                 android:foreground="?attr/selectableItemBackground"
                 app:cardUseCompatPadding="true"
                 tools:ignore="UnusedAttribute">
@@ -137,6 +94,6 @@
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
-        </LinearLayout>
+        </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
