--- a/src/main/res/layout/fragment_searching.xml
+++ b/src/main/res/layout/fragment_searching.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/searching_loading"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:layout_gravity="center"
+        android:layout_margin="8dp"
+        app:cardUseCompatPadding="true">
 
-    <de.smartsquare.kickdroid.view.LoadingIndicator
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="24dp" />
-</LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="16dp"
+                android:gravity="center"
+                android:text="@string/searching_loading"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+            <de.smartsquare.kickdroid.view.LoadingIndicator
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_marginTop="8dp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+</FrameLayout>
