Fix crash in GameViewModel and beautify view a bit

--- a/src/main/res/layout/fragment_idle.xml
+++ b/src/main/res/layout/fragment_idle.xml
@@ -10,18 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="8dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="16dp"
+            android:layout_margin="8dp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="16dp"
                 android:gravity="center"
                 android:text="@string/idle_status"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -30,8 +33,10 @@
                 android:id="@+id/createGame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginBottom="16dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="16dp"
                 android:enabled="false"
                 android:text="@string/idle_start"
                 tools:enabled="true" />
