--- a/src/main/res/layout/fragment_searching.xml
+++ b/src/main/res/layout/fragment_searching.xml
@@ -9,26 +9,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="8dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="8dp"
             android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
+                android:layout_marginBottom="24dp"
                 android:gravity="center"
                 android:text="@string/searching_loading"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <de.smartsquare.kickdroid.view.LoadingIndicator
                 android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:layout_marginTop="8dp" />
+                android:layout_height="64dp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
