--- a/src/main/res/layout/fragment_matchmaking.xml
+++ b/src/main/res/layout/fragment_matchmaking.xml
@@ -9,12 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="8dp"
         app:cardUseCompatPadding="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp">
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/centerGuideline"
