--- a/src/main/res/layout/fragment_playing.xml
+++ b/src/main/res/layout/fragment_playing.xml
@@ -69,7 +69,7 @@
                 android:layout_marginBottom="8dp"
                 android:gravity="end"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                app:layout_constraintBottom_toTopOf="@+id/barrier"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/teamVs"
                 app:layout_constraintRight_toLeftOf="@+id/teamVs"
                 app:layout_constraintTop_toBottomOf="@+id/scoreLeft"
@@ -85,7 +85,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="@string/playing_vs"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                app:layout_constraintBottom_toTopOf="@+id/barrier"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/scoreLeft" />
@@ -99,17 +99,11 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                app:layout_constraintBottom_toTopOf="@+id/barrier"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toRightOf="@+id/teamVs"
                 app:layout_constraintStart_toEndOf="@+id/teamVs"
                 app:layout_constraintTop_toBottomOf="@+id/scoreRight"
                 tools:text="tobi\nskonair" />
-
-            <androidx.constraintlayout.widget.Barrier
-                android:id="@+id/barrier"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:barrierDirection="top" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
