--- a/src/main/res/layout/fragment_statistics_first.xml
+++ b/src/main/res/layout/fragment_statistics_first.xml
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         tools:text="Ruby" />
 
