--- a/src/main/res/layout/fragment_user.xml
+++ b/src/main/res/layout/fragment_user.xml
@@ -18,90 +18,91 @@
             android:layout_gravity="center"
             app:cardUseCompatPadding="true">
 
-                <LinearLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/subhead"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:animateLayoutChanges="true"
-                    android:orientation="vertical">
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/user_set_info"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
-                    <TextView
-                        android:id="@+id/subhead"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/nameInputContainer"
+                    style="@style/Widget.Design.TextInputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:hint="@string/user_name_hint">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/nameInput"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginBottom="8dp"
-                        android:text="@string/user_set_info"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                        android:imeOptions="actionGo"
+                        android:inputType="text"
+                        android:maxLines="1" />
+                </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:id="@+id/nameInputContainer"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginBottom="8dp"
-                        android:hint="@string/user_name_hint">
+                <com.mikepenz.iconics.view.IconicsTextView
+                    android:id="@+id/errorText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:drawablePadding="8dp"
+                    android:gravity="center_vertical"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:visibility="gone"
+                    app:iiv_start_color="@color/icon"
+                    app:iiv_start_icon="cmd-alert-circle"
+                    app:iiv_start_padding="4dp"
+                    app:iiv_start_size="32dp"
+                    tools:text="An error occurred"
+                    tools:visibility="visible" />
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/nameInput"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:imeOptions="actionGo"
-                            android:inputType="text"
-                            android:maxLines="1" />
-                    </com.google.android.material.textfield.TextInputLayout>
+                <Button
+                    android:id="@+id/setButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="@string/user_set_action" />
 
-                    <com.mikepenz.iconics.view.IconicsTextView
-                        android:id="@+id/errorText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginBottom="8dp"
-                        android:drawablePadding="8dp"
-                        android:gravity="center_vertical"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                        android:visibility="gone"
-                        app:iiv_start_color="@color/icon"
-                        app:iiv_start_icon="cmd-alert-circle"
-                        app:iiv_start_padding="4dp"
-                        app:iiv_start_size="32dp"
-                        tools:text="An error occurred"
-                        tools:visibility="visible" />
-
-                    <Button
-                        android:id="@+id/setButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginEnd="16dp"
-                        android:layout_marginRight="16dp"
-                        android:layout_marginBottom="8dp"
-                        android:text="@string/user_set_action" />
-
-                    <de.smartsquare.kickdroid.view.LoadingIndicator
-                        android:id="@+id/loading"
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
-                        android:visibility="gone"
-                        tools:visibility="visible"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        tools:src="@mipmap/ic_launcher" />
-                </LinearLayout>
+                <de.smartsquare.kickdroid.view.LoadingIndicator
+                    android:id="@+id/loading"
+                    android:layout_width="64dp"
+                    android:layout_height="64dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:visibility="gone"
+                    tools:src="@mipmap/ic_launcher"
+                    tools:visibility="visible" />
+            </LinearLayout>
         </androidx.cardview.widget.CardView>
     </FrameLayout>
 </androidx.core.widget.NestedScrollView>
